# frtb-capital

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DCO.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: frtb-ci-babysit.md  frtb-doc-audit.md  frtb-simplify-audit.md
.claude/hooks/: claude-cwd-watchdog.py  create-agent-worktree.py  protect-main-worktree.py
.cursor/rules/: frtb-capital.mdc
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: benchmark.yml  cascade-close-subissues.yml  ci.yml  mutation.yml  release.yml
benchmarks/: crif_normalizer_harness.py  drc_adapter_harness.py  ima_arrow_batch_harness.py  ima_arrow_handoff_harness.py  sbm_adapter_harness.py
docs/: AGENT_WORKTREE_POLICY.md  ARCHITECTURE.md  ARTIFACT_METADATA_OWNERSHIP.md  ATTRIBUTION_IMPLEMENTATION_MATRIX.md  CALC_ENGINE_HARDENING_ROADMAP.md  CAPITAL_ATTRIBUTION_METHODS.md  CLIENT_INTEGRATION.md  CLIENT_REFERENCE_DATA.md  CODEX_HANDOFF.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_OWNERSHIP.md  FRTB_TARGET_OPERATING_MODEL.md  FRTB_TOM_DECISION_LOG.md  HIERARCHY_OWNERSHIP.md  LHA_DECOMPOSITION.md  NESTED_LH_VALIDATION.md  NPR_2_IMPLEMENTATION_AUDIT.md  README.md  REGULATORY_ASSUMPTIONS.md  REGULATORY_SUPPORT_EVIDENCE.md  REGULATORY_TRACEABILITY.md  RELEASE_PROCESS.md  REPO_CONTROLS.md  RISK_FACTOR_METADATA_OWNERSHIP.md  SCENARIO_METADATA.md  VALIDATION_ENGAGEMENT_CHARTER.md  VALIDATION_PACK.md  regulatory_sources.yml  visuals.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-monorepo-structure.md  0003-sa-drc-cva-scope.md  0004-weighted-interpolated-expected-shortfall.md  0005-material-change-policy.md  0006-type-a-nmrf-zero-correlation-ses.md  0007-pla-metric-policy-by-regime.md  0008-nested-liquidity-horizon-vectors.md  0009-desk-eligibility-two-state-guard.md  0010-standardised-approach-component-taxonomy.md  0011-core-runtime-dependency-policy.md  0012-capital-impact-attribution.md  0013-sbm-mar21-7-portfolio-scenario-selection.md  0014-sbm-csr-nonsec-delta.md  0015-deferred-versioning-and-changelog-fragments.md  0015-sbm-cnh-cny-girr-fx-mapping.md  0016-cva-sa-cva-hedging-disallowance.md  0017-sbm-cnh-cny-girr-fx-mapping.md  0018-cva-sa-cva-phase3-risk-classes.md  0018-suite-orchestration-contract-milestone.md  0019-reconciliation-helper-extraction-assessment.md  0020-ba-cva-reduced-portfolio-correlation-formula.md  0021-ba-cva-standalone-scva-alpha-divisor.md  0022-sa-jurisdiction-profile-consistency-guard.md  0023-arrow-tabular-handoff-boundary.md  0024-drc-us-npr-corporate-ig-risk-weight.md  0025-drc-us-npr-nonsec-bucket-taxonomy.md  0026-drc-explicit-fx-translation.md  0027-drc-ctp-row-path.md  0028-drc-securitisation-non-ctp-row-path.md  0029-drc-securitisation-risk-weight-evidence.md  0029-unified-standardised-component-handoff-contract.md  0030-drc-securitisation-fair-value-cap-evidence.md  0031-drc-attribution-method-contract.md  0032-analytical-euler-decomposition-framework.md  0032-arrow-batch-and-component-summary-vocabulary.md  0032-orchestration-sa-arithmetic-and-fallback-routing.md  0033-arrow-batch-and-component-summary-vocabulary.md  0033-result-store-duckdb-parquet.md  0034-result-store-duckdb-parquet.md  (+21 more)
docs/getting-started/: README.md  quickstart.ipynb
docs/model_documentation/: README.md
docs/modules/: MODEL_DOCUMENTATION_PROMOTION_PLAN.md  README.md  standardised-approach.md  vendor-frtb-frontends.md
docs/performance/: README.md  arrow-package-rollout.md  frtb-common-crif-normalizer-baseline.json  frtb-common-crif-normalizer-report.md  frtb-cva-arrow-batch-triage.md  frtb-drc-arrow-batch-triage.md  frtb-ima-arrow-batch-triage.md  frtb-ima-arrow-handoff-triage.md  frtb-ima-target-scale-baseline.json  frtb-rrao-arrow-batch-triage.md  frtb-sbm-batch-arrow-baseline.json  frtb-sbm-batch-arrow-report.md
docs/quality/: BENCHMARK_PROFILE.md  CODE_DRIFT_CONTROLS.md  PACKAGE_STATUS.md  (+13 more)
examples/: capital_run_fixture.py  run_demo.py
notebooks/: 02_stress_period_selection.ipynb  03_lha_es_imcc.ipynb  04_nmrf_chain.ipynb  05_pla_backtesting.ipynb  README.md
scripts/: agent_worktree.py  benchmark_target_scale.py  build_validation_pack.py  capture_repo_controls.py  client_handoff_registry.py  client_input_table_registry.py  export_arrow_schema.py  export_handoff_schema.py  generate_fixture.py  release_checksums.py  run_package_demos.py  validate_client_handoff.py  validate_client_input_table.py
tests/: __init__.py  drc_fixture_helpers.py  fixture_loader.py  rrao_fixture_helpers.py  sbm_fixture_helpers.py  test_audit.py  test_backtesting.py  test_capital.py  test_capital_run_fixture.py  test_claude_hooks.py  test_client_handoff_validation.py  test_client_input_table_validation.py  test_code_drift_check.py  test_data_contracts.py  test_dead_code_check.py  test_docstring_baseline_rules.py  test_expected_shortfall.py  test_frtb_dashboard.py  test_imcc.py  test_lha_builder.py  test_liquidity_horizon.py  test_liquidity_horizon_mapping.py  test_logging.py  test_nmrf.py  test_nmrf_method_selection.py  test_nmrf_stress_spec.py  test_nmrf_valuation_run.py  test_onboarding_mapper.py  test_pla.py  test_reduced_set.py  test_regimes.py  test_regulatory_sources.py  test_requirement_registry.py  test_rfet.py  test_run_benchmark_suite.py  test_run_package_demos.py  test_sbm_fixture_helpers.py  test_scenario.py  test_scenario_validation.py  test_select_pytest_targets.py  (+3 more)
tmp/: codex1085-large2.txt  codex1085-test.txt
(+341 files in other folders)
