[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frtb-ima"
version = "0.1.0"
description = "NPR 2.0-style FRTB IMA capital calculator prototype"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
notebooks = [
    "jupyter>=1.1",
    "matplotlib>=3.8",
    "nbmake>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.report]
fail_under = 84
show_missing = true
