[project]
name = "frtb-capital"
version = "0.1.0"
description = "FRTB market-risk capital calculation suite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "frtb-common",
    "frtb-cva",
    "frtb-drc",
    "frtb-ima",
    "frtb-orchestration",
    "frtb-rrao",
    "frtb-sbm",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
frtb-common = { workspace = true }
frtb-cva = { workspace = true }
frtb-drc = { workspace = true }
frtb-ima = { workspace = true }
frtb-orchestration = { workspace = true }
frtb-rrao = { workspace = true }
frtb-sbm = { workspace = true }

[dependency-groups]
dev = [
    "cyclonedx-bom>=7.3,<7.4",
    "hypothesis>=6.152,<6.153",
    "mutmut>=3.5,<3.6",
    "mypy>=2.1,<2.2",
    "pip-audit>=2.10,<2.11",
    "pytest>=9.0,<9.1",
    "pytest-cov>=7.1,<7.2",
    "ruff>=0.15,<0.16",
    "scipy>=1.16,<1.17",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"packages/*/examples/*.py" = ["T201"]
"packages/*/scripts/*.py" = ["T201"]
"scripts/**/*.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-v --tb=short"
norecursedirs = [".*", "build", "dist", "mutants"]

[tool.coverage.report]
fail_under = 90
show_missing = true
omit = ["*/demo_data.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
