[project]
name = "frtb-capital"
version = "0.1.0"
description = "FRTB market-risk capital calculation suite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "frtb-common",
    "frtb-cva",
    "frtb-drc",
    "frtb-ima",
    "frtb-orchestration",
    "frtb-result-store",
    "frtb-rrao",
    "frtb-sbm",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
frtb-common = { workspace = true }
frtb-cva = { workspace = true }
frtb-drc = { workspace = true }
frtb-ima = { workspace = true }
frtb-orchestration = { workspace = true }
frtb-result-store = { workspace = true }
frtb-rrao = { workspace = true }
frtb-sbm = { workspace = true }

[dependency-groups]
dev = [
    "cyclonedx-bom>=7.3,<7.4",
    "duckdb>=1.4,<2",
    "hypothesis>=6.152,<6.153",
    "import-linter>=2.8,<2.9",
    "mutmut>=3.5,<3.6",
    "mypy>=2.1,<2.2",
    "pip-audit>=2.10,<2.11",
    "pytest>=9.0,<9.1",
    "pytest-cov>=7.1,<7.2",
    "ruff>=0.15,<0.16",
    "scipy>=1.16,<1.17",
    "towncrier>=24.8,<25.0",
]

[tool.importlinter]
root_packages = [
    "frtb_common",
    "frtb_cva",
    "frtb_drc",
    "frtb_ima",
    "frtb_orchestration",
    "frtb_result_store",
    "frtb_rrao",
    "frtb_sbm",
]

[[tool.importlinter.contracts]]
name = "Capital suite package layering"
type = "layers"
layers = [
    "frtb_orchestration",
    "frtb_ima | frtb_sbm | frtb_drc | frtb_rrao | frtb_cva",
    "frtb_common",
]

[[tool.importlinter.contracts]]
name = "Result store depends only on shared primitives"
type = "forbidden"
source_modules = ["frtb_result_store"]
forbidden_modules = [
    "frtb_cva",
    "frtb_drc",
    "frtb_ima",
    "frtb_orchestration",
    "frtb_rrao",
    "frtb_sbm",
]

[[tool.importlinter.contracts]]
name = "Capital suite does not import the result store"
type = "forbidden"
source_modules = [
    "frtb_common",
    "frtb_cva",
    "frtb_drc",
    "frtb_ima",
    "frtb_orchestration",
    "frtb_rrao",
    "frtb_sbm",
]
forbidden_modules = ["frtb_result_store"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"packages/*/examples/*.py" = ["T201"]
"packages/*/scripts/*.py" = ["T201"]
"scripts/**/*.py" = ["T201"]
"tools/**/*.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
norecursedirs = [".*", "build", "dist", "mutants"]
markers = [
    "regulatory_ref(id): links a test to a regulatory requirement or source-crosswalk id",
    "challenger_ref(id): links a test to an external challenger implementation",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
omit = ["*/demo_data.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
